Add few style change

--- a/templates/Note/base.html
+++ b/templates/Note/base.html
@@ -23,7 +23,7 @@
     </head>
 
     <body>
-        <div class="ui menu" style="margin-bottom: 60px;">
+        <div class="ui menu">
             <div class="item">
               <img src="">
             </div>
