--- a/person/templates/person/TeamIndex.html
+++ b/person/templates/person/TeamIndex.html
@@ -8,12 +8,25 @@
   </div>
   <div class="eleven wide column" style="background-color: white">
     <div class="ui secondary pointing menu ">
-      <a class="item active">
+      {%if "/person/Team/Calender/" in request.path %}
+      <a class="item active" href="/person/Team/Calender/{{teamid}}">
         Calender
       </a>
-      <a class="item ">
+      {%else%}
+      <a class="item" href="/person/Team/Calender/{{teamid}}">
+        Calender
+      </a>
+      {%endif%}
+
+      {%if "/person/Team/Planner/" in request.path %}
+      <a class="item active" href="/person/Team/Planner/{{teamid}}">
         Planner
       </a>
+      {%else%}
+      <a class="item" href="/person/Team/Planner/{{teamid}}">
+        Planner
+      </a>
+      {%endif%}
       <a class="item ">
         Messege
       </a>
