--- a/person/templates/person/TeamIndex.html
+++ b/person/templates/person/TeamIndex.html
@@ -31,7 +31,7 @@
         Messege
       </a>
       <div class="item">
-          <button class="positive ui button centered Big createnote" onclick="$('.planmodal').modal('show');" >
+          <button class="positive ui button centered Big createnote" onclick="$('.plandetailmodal').modal('show');" >
           <i class="users icon"></i>
            AddPlan
           </button>
