--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -1,4 +1,4 @@
-
+<button class="mini ui button" onclick="$('.plandetailmodal').modal('show');">create</button>
 <div class="ui grid">
     {% for p in plan %}
     <div class="four wide column">
@@ -6,7 +6,6 @@
 
             <h2 class=" ui centered header" style="color: #34495E; background-color: dodgerblue; padding: 5px;">
               {{ p.name }}
-              <!--<button class="mini ui button" onclick="$('.plandetailmodal').modal('show');">create</button>-->
             </h2>
 
             <div class="ui grid container sortable sortlist" style="min-height: 60px;">
