--- a/person/templates/person/addPlandetail.html
+++ b/person/templates/person/addPlandetail.html
@@ -3,12 +3,12 @@
     <h3 class="ui blue header">Create</h3>
   </div>
   <div class="content">
-      <form action="/person/AddPlandetail/" class="ui form" method="POST">
+      <form action="/person/AddPlandetail/{{teamid}}/" class="ui form" method="POST">
         {% csrf_token %}
         <label>筆記</label>
         <div class="field">
           <div class="ui fluid search selection dropdown">
-            <input name="tags" type="hidden">
+            <input name="noteid" type="hidden">
             <i class="dropdown icon"></i>
             <div class="default text">Note</div>
             <div class="menu">
@@ -21,9 +21,9 @@
         <label>assign</label>
         <div class="field">
           <div class="ui fluid search selection dropdown">
-            <input name="tags" type="hidden">
+            <input name="user" type="hidden">
             <i class="dropdown icon"></i>
-            <div class="default text">Note</div>
+            <div class="default text">assign</div>
             <div class="menu">
               {% for u in user%}
               <div class="item" data-value="{{u.userid}}">{{u.userid}}</div>
@@ -31,8 +31,29 @@
             </div>
           </div>
         </div>
+        <label>Start Date</label>
+        <div class="field">
+            <input type="text" placeholder="YYYY-MM-DD" name="startDate">
+        </div>
+        <label>End Date</label>
+        <div class="field">
+            <input type="text" placeholder="YYYY-MM-DD" name="endDate">
+        </div>
+        <div class="field">
+          <div class="ui fluid search selection dropdown">
+            <input name="plan" type="hidden">
+            <i class="dropdown icon"></i>
+            <div class="default text">plan</div>
+            <div class="menu">
+              {% for p in plan%}
+              <div class="item" data-value="{{p.idplan}}">{{p.name}}</div>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
         <br>
-        <button class="fluid ui blue button">Add</button>
+        <button class="fluid ui blue button">submit</button>
       </form>
   </div>
+
 </div>
