add uploadImg button & calendar can't move

--- a/person/templates/person/TeamIndex.html
+++ b/person/templates/person/TeamIndex.html
@@ -38,7 +38,7 @@
           </button>
       </div>
       <div class="item">
-        
+
         <button class="tiny ui teal basic button" onclick="$('.plandetailmodal').modal('show');">
           <i class="plus icon"></i>
             Card
@@ -59,4 +59,6 @@
 {% include 'upload/create_note.html' %}
 {% include 'person/addPlan.html' %}
 {% include 'person/addPlandetail.html' %}
+{% include 'person/create_group.html' %}
+{% include 'person/uploadImg.html' %}
 {% endblock %}
