--- a/person/templates/person/Calender.html
+++ b/person/templates/person/Calender.html
@@ -20,7 +20,7 @@
       },
       //defaultDate: '2018-03-12',
       navLinks: true, // can click day/week names to navigate views
-      editable: true,
+      editable: false,
       eventLimit: true, // allow "more" link when too many events
       events: data
       });
@@ -38,6 +38,3 @@
 
   <div>{{plandetail.plan.name}}</div>
   <div id='calendar' style="max-width: 900px; margin: 0 auto;"></div>
-
-
-
