--- a/person/templates/person/index.html
+++ b/person/templates/person/index.html
@@ -14,4 +14,5 @@
 </div>
 {% include 'upload/create_note.html' %}
 {% include 'person/create_group.html' %}
+{% include 'person/uploadImg.html' %}
 {% endblock %}
