--- a/person/templates/person/uploadImg.html
+++ b/person/templates/person/uploadImg.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-    <title>图片上传</title>
-    <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-</head>
 
-<body>
-    <form action="." method="post" enctype="multipart/form-data">
+<div class="ui small modal imgmodal">
+  <div class="header">
+    <h3 class="ui blue header">Upload your photo</h3>
+  </div>
+  <div class="content">
+    <form action="/person/upload/" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <input type="file" name="img" id='photo'>
-        <img id="photo_img" src="#" style="height: 100px; width: 100px"/>
-        <input type="submit" value="上传">
-
+        <input type="file" name="img" id='photo' class="ui button">
+        <img  id="photo_img" class="ui medium bordered image" src="https://semantic-ui.com/images/wireframe/image.png">
+        <!--<img id="photo_img" src="#" style="height: 100px; width: 100px"/>-->
+        <button type="submit" class="ui button">上傳</button>
     </form>
+  </div>
     <script>
     $("#photo").change(function(){
       readURL(this);
@@ -33,5 +26,5 @@
       }
     }
   </script>
-</body>
-</html>
+
+</div>
