--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -1,7 +1,35 @@
+<script>
+  $(document).ready(function(){
+    $('.delete').click(function(){
+      var idplandetail =$(this).attr("id");
+      $('.deletemodal').modal('toggle');
 
+    //  alert(delid)
+      $('.deleteTag').click(function(){
+        var tag = $(this).attr("id");
+        //alert(tag);
+        if(tag==1){
+          $.ajax({
+            url: '/person/deletePlandetail/',
+            type: "POST",
+            data: {"id": idplandetail },
+            dataType: 'json',
+            success: function(data) {
+               location.reload();
+            }
+          })
+        }
+        else{
+          location.reload();
+        }
+      });
+    });
+  })
+</script>
+<form action="/person/updatePlandetail/" method="post">
 <div style="overflow: scroll; width: auto; white-space: nowrap;">
     {% for p in plan %}
-    <div style="width: 200px; display: inline-block; vertical-align:top; margin: 5px;">
+    <div id="plan_{{p.idplan}}" name="plan_{{p.idplan}}" style="width: 200px; display: inline-block; vertical-align:top; margin: 5px;">
         <div style="background-color: #D5DBDB;">
             <h2 class=" ui centered header" style="color: #34495E; background-color: dodgerblue; padding: 5px;">
               {{ p.name }}
@@ -10,11 +38,14 @@
             <div class="ui grid container sortable sortlist" style="min-height: 60px; ">
                 {% for pd,n in plancard %}
                     {%if p.idplan == pd.plan_id %}
-                     <div  style=" background: white; padding: 5px 0px 10px 0px; width:200px; margin: 0px;">
+                     <div id="sub{{pd.idplandetail}}" style=" background: white; padding: 5px 0px 10px 0px; width:200px; margin: 0px;">
                         <div class="ui card StackedListItem--isDraggable">
                             <div class="content centered">
-                                 <div class="header">{{n.title}}</div>
-                                 <div class="meta">{{n.intro}}</div>
+                              <div class="right floated" style="margin-left: 5px;" >
+                                {% include 'person/deleteDetail_template.html' %}
+                              </div>
+                              <div class="header">{{n.title}}</div>
+                              <div class="meta">{{n.intro}}</div>
                             </div>
                             <div class="content">
                                 <div class="description"> Start:
@@ -41,7 +72,9 @@
                 {% endfor %}
             </div>
         </div>
-        
+
     </div>
     {% endfor %}
 </div>
+<button>update</button>
+</form>
