--- a/upload/templates/upload/delete_template.html
+++ b/upload/templates/upload/delete_template.html
@@ -11,8 +11,7 @@
       <p>Are you sure to delete this note?</p>
     </div>
     <div class="actions">
-      <button class="ui  green button deleteTag" id="1">Yse</button>
+      <button class="ui  green button deleteTag" id="1">Yes</button>
       <button class="ui button deleteTag" id="0">No</button>
     </div>
   </div>
-
