Group indx and Plan Message

--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -12,7 +12,7 @@
                     {%if p.idplan == pd.plan_id %}
                      <div  style=" background: white; padding: 5px 0px 10px 0px; width:200px; margin: 0px;">
                         <div class="ui card StackedListItem--isDraggable">
-                            <div class="content centered">
+                            <div class="content centered" style="overflow: hidden;">
                                  <div class="header">{{n.title}}</div>
                                  <div class="meta">{{n.intro}}</div>
                             </div>
