--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -1,5 +1,13 @@
-
-<div style="overflow: scroll; width: auto; white-space: nowrap;">
+{%if plan|length == 0 %}
+<h2 class="ui icon center aligned header" style="height: 80%; margin-top: 100px;">
+        <i class="columns icon"></i>
+        <div class="content">
+          Oops! You dont have any plan
+          <div class="sub header">Pleae click "+ Plan" to create a plan</div>
+        </div>
+</h2>
+{%else%}
+<div style="overflow: scroll; width: auto; white-space: nowrap;height: 80%;">
     {% for p in plan %}
     <div style="width: 200px; display: inline-block; vertical-align:top; margin: 5px;">
         <div style="background-color: #D5DBDB;">
@@ -45,3 +53,4 @@
     </div>
     {% endfor %}
 </div>
+{%endif%}
