--- a/person/templates/person/TeamIndex.html
+++ b/person/templates/person/TeamIndex.html
@@ -18,6 +18,16 @@
       </a>
       {%endif%}
 
+      {%if "/person/Team/Note/" in request.path %}
+      <a class="item active" href="/person/Team/Note/{{teamid}}">
+        Note
+      </a>
+      {%else%}
+      <a class="item" href="/person/Team/Note/{{teamid}}">
+        Note
+      </a>
+      {%endif%}
+
       {%if "/person/Team/Planner/" in request.path %}
       <a class="item active" href="/person/Team/Planner/{{teamid}}">
         Planner
@@ -51,6 +61,8 @@
         {%include "person/Calender.html" %}
       {%elif "/person/Team/Planner/" in request.path %}
         {%include "person/Planner.html" %}
+      {%elif "/person/Team/Note/" in request.path %}
+        {%include "person/Note.html" %}
       {%endif%}
     </div>
   </div>
