--- a/person/templates/person/sidemenu.html
+++ b/person/templates/person/sidemenu.html
@@ -12,7 +12,7 @@
           CreateNote
       </button>
     </div>
-  <a class="active item" href="../../person/index/">
+  <a class="active item" href="/person/index/">
     MyNote
   </a>
   <a class="item" href="/person/Myfavorite/">
