--- a/upload/templates/upload/create_note.html
+++ b/upload/templates/upload/create_note.html
@@ -4,7 +4,7 @@
         <h3 class="ui blue header">Create Note</h3>
     </div>
     <div class="content">
-        <form action="../../upload/create/" method="POST" name="form1" class="ui form">
+        <form action="/upload/create/" method="POST" name="form1" class="ui form">
             {% csrf_token %}  <!-- 啟動CSRF防護，保護伺服器避免被攻擊 -->
             <div class="field">
                 <label>Title:</label>
@@ -54,7 +54,7 @@
                     <label>Permission</label>
 
                     <div class="ui selection dropdown" >
-                        <input type="hidden" name="permission">
+                        <input type="hidden" name="permission"  id="per">
                         <i class="dropdown icon"></i>
                         <div class="default text">Select Permission</div>
                         <div class="menu">
@@ -73,26 +73,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="field">
-                    <label>Group</label>
-                    <select class="ui dropdown" name="permission">
-                            <option value="0">
-                                <i class="ban icon">i</i>Hide
-                            </option>
-                            <option value="1">
-                                    <i class="user icon" selected></i>Personal
-                            </option>
-                            <option value="2">
-                                    <i class="ban icon"></i>Public
-                            </option>
-                            <option value="3">
-                                    <i class="users icon"></i>Group
-                            </option>
-                    </select>
-                </div>
             </div>
+            <div class="field" id='gro' style="visibility:hidden;">
+                <label>Group</label>
+                <div class="ui fluid search selection dropdown">
+                  <input name="group" type="hidden">
+                  <i class="dropdown icon"></i>
+                  <div class="default text">Select Group</div>
+                    <div class="menu">
+                      {% for g in group %}
+                          <div class="item" data-value="{{g.idgroup}}">{{g.name}}</div>
+                      {% endfor %}
+                    </div>
+                </div>
+                <!--    -->
+           </div>
             <br>
             <button type="submit" class="ui blue basic button">Create</button>
         </form>
     </div>
  </div>
+<script>
+   $(document).ready(function(){
+     if ($('#per').text() == '3'){
+       $('#gro').show();
+     }
+   })
+</script>
