--- a/person/templates/person/sidemenu.html
+++ b/person/templates/person/sidemenu.html
@@ -2,7 +2,7 @@
 <div class="ui secondary vertical menu">
   <div class="item">
       <button class="positive ui button centered big createnote" onclick=" $('.imgmodal').modal('show');">
-          <i class="plus square icon"></i>
+          <i class="user circle icon"></i>
           uploadImg
       </button>
     </div>
