--- a/person/templates/person/deleteDetail_template.html
+++ b/person/templates/person/deleteDetail_template.html
@@ -1,15 +1,15 @@
 
-<button type="button" class="ui basic icon button delete" id='{{pd.idplandetail}}'>
+<button type="button" class="ui basic icon button deleteplandetail" id='{{pd.idplandetail}}'>
   <i class="close icon"></i>
 </button>
 <!-- Modal -->
-<div class="ui mini modal deletemodal">
+<div class="ui mini modal deleteplandetailmodal">
     <div class="header">Delete plan</div>
     <div class="content">
       <p>Are you sure to delete this plan?</p>
     </div>
     <div class="actions">
-      <button class="ui  green button deleteTag" id="1">Yes</button>
-      <button class="ui button deleteTag" id="0">No</button>
+      <button class="ui  green button deleteplandetailTag" id="1">Yes</button>
+      <button class="ui button deleteplandetailTag" id="0">No</button>
     </div>
   </div>
