--- a/upload/templates/upload/note_template.html
+++ b/upload/templates/upload/note_template.html
@@ -108,8 +108,8 @@
           <div class = "item">
             {{note.field}}
           </div>
-          <div clas="item">
-            {{note.subjects}}</div>
+        <!--<div clas="item">
+            {{note.subjects}}</div>-->
         </div>
       </div>
       <div class="content">
