Small Fix to Styling

--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -50,9 +50,7 @@
                      <div name="{{n.title}}" style=" background: white; padding: 5px 0px 10px 0px; width:200px; margin: 0px;">
                         <div class="ui card StackedListItem--isDraggable">
                             <div class="content centered" style="overflow: hidden;">
-                              <div class="right floated" style="margin-left: 5px;" >
-                                {% include 'person/deleteDetail_template.html' %}
-                              </div>
+
                               <div class="header">{{n.title}}</div>
                               <div class="meta">{{n.intro}}</div>
                             </div>
@@ -74,6 +72,9 @@
                                         <i class="user icon"></i>
                                         yyu
                                 </span>
+                                <div class="left floated" style="margin-left: 5px;" >
+                                  {% include 'person/deleteDetail_template.html' %}
+                                </div>
                             </div>
                         </div>
                     </div>
