--- a/person/templates/person/sidemenu.html
+++ b/person/templates/person/sidemenu.html
@@ -12,12 +12,24 @@
           CreateNote
       </button>
     </div>
+    {%if "/person/index" in request.path %}
   <a class="active item" href="/person/index/">
     MyNote
   </a>
+  {%else%}
+  <a class="item" href="/person/index/">
+    MyNote
+  </a>
+  {%endif%}
+  {%if "Myfavorite" in request.path %}
+  <a class="active item" href="/person/Myfavorite/">
+    Favorite
+  </a>
+  {% else %}
   <a class="item" href="/person/Myfavorite/">
     Favorite
   </a>
+  {%endif%} 
   <div class="ui dropdown item">
     <i class="dropdown icon"></i>
     Display Options
@@ -38,10 +50,17 @@
         </button>
     </div>
 
-    {% for group in group %}
-        <a class="item" href="/person/Team/Calender/{{group.idgroup}}">
+    {% for g in group %}
+        {%if g.idgroup|slugify in request.path %}
+        <a class=" active item" href="/person/Team/Calender/{{g.idgroup}}">
           <i class="hand point right outline icon"></i>
-          {{group.name}}
+          {{g.name}}
         </a>
+        {%else%}
+        <a class="item" href="/person/Team/Calender/{{g.idgroup}}">
+          <i class="hand point right outline icon"></i>
+          {{g.name}}
+        </a>
+        {%endif%}
     {% endfor %}
 </div>
