--- a/templates/Note/base.html
+++ b/templates/Note/base.html
@@ -27,6 +27,9 @@
             <div class="item">
               <img src="">
             </div>
+            <a class="item" href="https://140.136.150.93:3232/">
+                視訊
+            </a>
             <a class="item" href="{% url 'person:index' %}">MyPage</a>
             <a class="item" href = "{% url 'upload:index'  %}">Notes</a>
             {% if request.user.is_authenticated is False %}
@@ -43,6 +46,7 @@
                 <div class="right floated"><h5>Hi, {{request.user.email}}</h5></div>
             </div>
             {% endif %}
+
         </div>
         <div>
         {% block content %}{% endblock content %}
