--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -95,7 +95,7 @@
                             <div class="extra content">
                                 <span class="right floated">
                                         <i class="user icon"></i>
-                                        yyu
+                                        {{pd.assign.username}}
                                 </span>
                                 <div class="left floated" style="margin-left: 5px;" >
                                   {% include 'person/deleteDetail_template.html' %}
