--- a/templates/Note/base.html
+++ b/templates/Note/base.html
@@ -25,9 +25,9 @@
     <body>
         <div class="ui menu" style="margin-bottom: 60px; ">
             <div class="item" style="padding: 0px;">
-              
+
             </div>
-            <img src="{% static 'Note/logo.png' %}" width="100px" height="65px">
+            <img src="http://140.136.150.93/media/logo.png" width="100px" height="65px">
             <a class="item" href="{% url 'person:index' %}">MyPage</a>
             <a class="item" href = "{% url 'upload:index'  %}">Notes</a>
             <a class="item" href ="https://140.136.150.93.3232/">WebCam</a>
