--- a/upload/templates/upload/note_template.html
+++ b/upload/templates/upload/note_template.html
@@ -76,19 +76,17 @@
       <div class="content">
         {% if note.user.first_name == '' %}
             <img class="ui avatar image" src="https://semantic-ui.com/images/avatar/large/elliot.jpg">'
-          
+
         {%else%}
         <img class="ui avatar image" src="/media/{{note.user.first_name}}">
         {%endif%}
-        
+
           {{note.user.username}}
           <!-- 刪除筆記的button -->
           <div class="right floated" style="margin-left: 5px;" >
               {% include 'upload/delete_template.html' %}
           </div>
-          <div class="right floated meta" style="margin-top: 4px;">
-            <span> 14h</span>
-          </div>
+          
 
       </div>
     {% if note.permission == '2' or note.user_id == request.user.id %}
@@ -127,10 +125,12 @@
           <!--<button class="ui left floated button delete" id='{{note.idnote}}'>delete</button>-->
           {%if note.permission == '2'  %}
             <i class="globe icon"></i>公開
+          {% elif note.permission == '1' %}
+            <i class="user icon"></i>非公開
           {% elif note.permission == '0' %}
             <i class="ban icon"></i>私人
           {% else %}
-            <i class="user icon"></i>非公開
+            <i class="users icon"></i>群組
           {% endif %}
         </div>
       </div>
