--- a/upload/templates/upload/create_note.html
+++ b/upload/templates/upload/create_note.html
@@ -30,9 +30,9 @@
                 </div>
                 -->
                 <!--暫時改-->
-                <div class="ui fluid multiple search selection dropdown">
-                  <input name="field" type="hidden">
-                  <i class="dropdown icon"></i>
+                <!--<div class="ui fluid multiple search selection dropdown">-->
+                  <input name="field" type="text">
+                <!--  <i class="dropdown icon"></i>
                   <div class="default text">Select Field</div>
                     <div class="menu">
                       {% for s in subject %}
