--- a/person/templates/person/TeamIndex.html
+++ b/person/templates/person/TeamIndex.html
@@ -98,7 +98,7 @@
         {%include "person/Planner.html" %}
       {%elif "/person/Team/Note/" in request.path %}
       <div class="notePage ui grid stackable">
-        {%include "person/Note.html" %}
+        {%include "upload/note_template.html" %}
       </div>
       {%elif "/person/Team/Member/" in request.path %}
         {%include "person/Member.html" %}
